# bevy-showcase

./: .gitignore  Cargo.toml  README.md  build.rs
src/: graphics.rs  main.rs  player.rs  scene.rs
src/player/: camera.rs  controls.rs
src/replace_colliders/: mod.rs  physics_replace_proxies.rs  utils.rs
src/scene/: ambient_sound.rs  attract_force.rs  audio.rs  components.rs  police_cars.rs  spawn_objects.rs  trains.rs
