[package]
name = "fmod-showcase"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.2", features = ["dynamic_linking"] }
bevy_fmod = { git = "https://github.com/Salzian/bevy_fmod.git", tag = "v0.3.0" }
bevy_framepace = "0.13.3"
bevy_xpbd_3d = { git = "https://github.com/Jondolf/bevy_xpbd.git", branch = "main" }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
