[package]
name = "fmod-showcase"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#bevy = { version = "0.11.2", features = ["dynamic_linking"] }
bevy = { version = "0.11"}
#bevy_fmod = { git = "https://github.com/Salzian/bevy_fmod.git", tag = "v0.3.0" }
bevy_fmod = { git="https://github.com/Salzian/bevy_fmod.git", branch = "main", features = ["live-update"] }
bevy_framepace = "0.13.3"
bevy_rapier3d = { version = "0.22.0", features = ["parallel", "serde-serialize"] }
bevy_mod_wanderlust = "0.4.0"
bevy_gltf_components = { git="https://github.com/kaosat-dev/Blender_bevy_components_worklflow.git" }
bevy_asset_loader = "0.17.0"
bevy-inspector-egui = "0.20"
bevy_mod_picking = "0.15.0"
bevy_eventlistener = "0.3.0"
random-branch = "0.1.1"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
